scripts/nullaway/annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8.txt
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:71: error: [NullAway] initializer method does not guarantee @NonNull fields dag (line 29), vertexMapping (line 52) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AbstractVertexSignature(InvariantType invariantType) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:93: error: [NullAway] unboxing of a @Nullable value
            int internalVertexIndex = vertexMapping.get(originalVertexIndex);
                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:146: error: [NullAway] unboxing of a @Nullable value
            int internalIndex = vertexMapping.get(externalIndex);
                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:155: error: [NullAway] unboxing of a @Nullable value
            int internalIndex = vertexMapping.get(externalIndex);
                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:265: error: [NullAway] dereferenced expression orbit is @Nullable
        if (orbit.size() < 2) {
                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:468: error: [NullAway] dereferenced expression tree is @Nullable
                tree.updateHeight(currentHeight);
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:471: error: [NullAway] dereferenced expression parent is @Nullable
                parent = parent.parent;
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractVertexSignature.java:508: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return tree;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/DAG.java:257: error: [NullAway] initializer method does not guarantee @NonNull field invariants (line 239) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DAG(int rootVertexIndex, int graphVertexCount) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/DAG.java:519: error: [NullAway] dereferenced expression orbit is @Nullable
	            if (maxOrbit == null || orbit.size() > maxOrbit.size()) { 
	                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/DAG.java:644: error: [NullAway] unboxing of a @Nullable value
                    edgeColor = relative.edgeColors.get(layerNode.vertexIndex);
                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/DAG.java:646: error: [NullAway] unboxing of a @Nullable value
                    edgeColor = layerNode.edgeColors.get(relative.vertexIndex);
                                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/MoleculeBuilder.java:12: error: [NullAway] initializer method does not guarantee @NonNull field molecule (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MoleculeBuilder() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractGraphSignature.java:191: error: [NullAway] unboxing of a @Nullable value
            int count = sigmap.get(signature);
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractGraphSignature.java:195: error: [NullAway] unboxing of a @Nullable value
        int count = sigmap.get(finalSignature);
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/AbstractGraphSignature.java:295: error: [NullAway] dereferenced expression canonicalSignature is @Nullable
        return canonicalSignature.getCanonicalLabelling(n);
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/MoleculeReader.java:36: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return molecule;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/chemistry/MoleculeReader.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/simple/SimpleGraphBuilder.java:11: error: [NullAway] initializer method does not guarantee @NonNull field graph (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SimpleGraphBuilder() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/edgecolored/EdgeColoredGraphBuilder.java:18: error: [NullAway] dereferenced expression this.graph is @Nullable
        this.graph.makeEdge(vertexIndex1, vertexIndex2, edgeLabel);
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url8d1df200a8_gilleain_signatures_tgz-pJ8-signature_chemistry_LargeMoleculeTestJ8/src/signature/display/DisplayableColoredTree.java:133: error: [NullAway] initializer method does not guarantee @NonNull field colorMap (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DisplayableColoredTree(int width, int height) {
           ^
    (see http://t.uber.com/nullaway )
21 errors
